Task-4-IaC-Orchestration/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: progree-app-service
spec:
  type: ClusterIP
  selector:
    app: progree-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
