Task-4-IaC-Orchestration/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: progree-app-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: app.progree-internship.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: progree-app-service
            port:
              number: 80
